<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FoodTracker</string>
    <string name="title_home">Food</string>
    <string name="title_shop_list">Shop List</string>
    <string name="title_meal_plan">Meal Plan</string>
    <string name="title_settings">Settings</string>
    <string name="title_dialog">Error</string>
    <string name="message_food_dialog">Please complete entering the item\'s information</string>
    <string name="button_ok">Ok</string>
    <string name="success_food"> added successfully to Food</string>
    <string name="success_shop"> added successfully to Shop List</string>
    <string name="back_button">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple_name">Apple name</string>
    <string name="exp_date">Exp date</string>
    <string name="all">All</string>
    <string name="pantry">Pantry</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>
    <string name="mealPlanString">Weekly Meal Plan</string>
    <string name="nextString">Next</string>
    <string name="PrevString">Prev</string>
    <string name="noMealsBreakfast">No meals in Breakfast</string>
    <string name="NoMealsDinner">No meals in Dinner</string>
    <string name="NoMealsLunch">No meals in Lunch</string>
    <string name="breakfastString">Breakfast</string>
    <string name="dinnerString">Dinner</string>
    <string name="addMeal">Add Meal</string>
    <string name="titleAddShopping">Add an item to Shopping List</string>
    <string name="FoodNameString">Food Name</string>
    <string name="AddButton">Add</string>
    <string name="QuantityString">Quantity</string>
    <string name="AddItemFood">Add an item to Food</string>
    <string name="DateExpString">Date of Expiration</string>
    <string name="AddDateString">Add Date</string>
    <string name="DontKnowString">Don\'t Know?</string>
    <string name="PlaceString">Place of Storage</string>
    <string name="DateString">Date</string>
    <string name="SearchBarHintString">Find Food Here</string>
    <string name="MealPlanFor">Meal Plan for</string>
    <string name="LunchString">Lunch</string>
    <string name="PreviousStr">Prev</string>
    <string name="PlusStr">+</string>
    <string name="settings">Settings</string>

    <string name="notifications_preferences">Notifications</string>
    <string name="notifications_pref_times">Preferred Times</string>

    <string name="notif_pref_morning">9:00</string>
    <string name="notif_pref_noon">13:00</string>
    <string name="notif_pref_night">19:00</string>

    <string-array name="notifications_pref_times_values">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>

</resources>