<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDateMealPlan">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/MealPlanFor"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DateEditView"
        android:layout_width="252dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="Day of Week + Date"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/LinearLayoutBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_light_blue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/TextViewBreakfast"
            android:layout_width="406dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center|fill"
            android:paddingStart="20dp"
            android:text="@string/breakfastString"
            android:textColor="@color/white_mint"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/ButtonAddBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/addMeal"
            android:backgroundTint="@color/light_green"/>

        <LinearLayout
            android:id = "@+id/LayoutBreakfastListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TextNoBreakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noMealsBreakfast"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/ListViewBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutLunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutBreakfast"
        android:orientation="vertical"
        android:background="@drawable/shape_dark_blue">

        <TextView
            android:id="@+id/TextViewLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/LunchString"
            android:textSize="20sp"
            android:textColor="@color/white_mint"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/ButtonAddLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/addMeal"
            android:backgroundTint="@color/light_green"/>

        <LinearLayout
            android:id="@+id/LayoutLunchListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextNoLunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoMealsLunch"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/ListViewLunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </ListView>

            </ScrollView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutLunch"
        android:orientation="vertical"
        android:background="@drawable/shape_salmon_pink">

        <TextView
            android:id="@+id/TextViewDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/dinnerString"
            android:textSize="20sp"
            android:textColor="@color/white_mint"/>

        <Button
            android:id="@+id/ButtonAddDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|fill"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/addMeal"
            android:backgroundTint="@color/light_green"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TextNoDinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoMealsDinner"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/ListViewDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>
        </ScrollView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>