<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/semibold"
        android:text="@string/app_name"
        android:textColor="@color/light_blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.31"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher_round" />

        <ImageView
            android:id="@+id/circle_crop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/circle_crop" />

    </FrameLayout>
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/search_bg"
        android:drawableLeft="@drawable/ic_search_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@android:string/search_go"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:text="@android:string/search_go"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_filter_list_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.111">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/Allbutton"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/semibold"
                android:text="@string/all"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/PantryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/semibold"
                android:text="@string/pantry"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/FridgeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/semibold"
                android:text="@string/fridge"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <Button
                android:id="@+id/FreezerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/semibold"
                android:text="@string/freezer"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/food_recycler"
            android:layout_width="380dp"
            android:layout_height="424dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.011" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button_food"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#51CB20"
            android:backgroundTintMode="add"
            android:clickable="true"
            android:onClick="add_food"
            android:src="@drawable/ic_plus_white_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="40dp" />

        <ImageView
            android:id="@+id/imageEmptyFood"
            android:layout_width="133dp"
            android:layout_height="164dp"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:src="@drawable/empty_box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/TextViewEmptyFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="No items in food found..."
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageEmptyFood"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>